<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mauriciogodinez.tourguideapp.TourActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.v7.widget.ButtonBarLayout
        android:id="@+id/buttonbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/padding_bar">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/boton_omitir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/omit_button"
            android:textColor="@color/button_bar"
            android:textSize="@dimen/texto_boton" />

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/ic_more_horiz" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/boton_siguiente_actividad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/next_button"
            android:textColor="@color/button_bar"
            android:textSize="@dimen/texto_boton" />

    </android.support.v7.widget.ButtonBarLayout>

    <Button
        android:id="@+id/appCompatButton"
        style="@style/botones_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonbar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/minimun_width_button"
        android:text="@string/continue_button" />

</RelativeLayout>
